refactor: S3 대량 삭제 비동기화 및 데이터 정합성 보장 구조 개선
[S3BatchDeletionScheduler]
- 삭제 전략 변경: (기존) 선 삭제 후 실패 건 복구 -> (변경) s3 삭제 성공 확인 후 선택적 DB 삭제.
- 이를 통해 네트워크 장애나 서버 강제 종료 시 발생할 수 있는 데이터 유실 위험(미아 파일 발생)을 원천 차단.
- 메인 스레드에서 s3 응답 결과와 원본 데이터를 대조하여 ID 매핑을 수행하도록 흐름 개선.

[S3StorageCleaner]
- 도메인 의존성 제거: FilePaths 객체 대신 순수 List<String> 기반으로 동작하도록 수정하여 s3 서비스의 독립성 확보.
- 최적화 힌트 제공: s3 DeleteObjects 요청 시 quiet 모드 설정을 지원하여, 대량 작업 시 불필요한 메모리 점유를 줄일 수 있는 선택지 제공.
- 비동기 워커 스레드의 오버헤드를 줄이고, DeletedResult record를 통해 성공/실패 경로를 명확히 구분하여 반환.

[FilePaths]
- 비즈니스 로직 응집: s3 결과(String)를 기반으로 자기 자신(id 포함)을 필터링하는 filterByPaths 메서드 추가.

[RecycleBinRepository]
- deleteByIdIn 추가: 성공한 ID 리스트를 SQL IN 절을 사용하여 단일 쿼리로 효율적으로 삭제 처리.

NOTE: s3 삭제에 계속 실패하는 파일 정보는 DB(recycle_bin)에 잔류하며, 이는 다음 스케줄러 사이클에서 재시도 대상이 됨으로써 최종적인 데이터 일관성을 보장.