@@ -2,13 +2,13 @@ package revi1337.onsquad.infrastructure.aws.s3;
 
 import java.util.List;
 import java.util.concurrent.CompletableFuture;
-import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
 import org.springframework.scheduling.annotation.Async;
 import software.amazon.awssdk.services.s3.S3Client;
 import software.amazon.awssdk.services.s3.model.Delete;
 import software.amazon.awssdk.services.s3.model.DeleteObjectsRequest;
 import software.amazon.awssdk.services.s3.model.DeleteObjectsResponse;
+import software.amazon.awssdk.services.s3.model.DeletedObject;
 import software.amazon.awssdk.services.s3.model.ObjectIdentifier;
 import software.amazon.awssdk.services.s3.model.S3Error;
 
@@ -21,16 +21,28 @@ public class S3StorageCleaner {
     private final String bucketName;
 
     @Async("s3DeletionExecutor")
-    public CompletableFuture<FilePaths> deleteInBatch(FilePaths filePaths) {
-        List<ObjectIdentifier> objectIdentifiers = createObjectIdentifiers(filePaths);
-        DeleteObjectsResponse deleteResponse = deleteBatch(objectIdentifiers);
-        FilePaths failedPaths = getFailPathsFromResponse(deleteResponse);
+    public CompletableFuture<DeletedResult> deleteInBatch(List<String> paths) {
+        List<ObjectIdentifier> objectIdentifiers = createObjectIdentifiers(paths);
+        DeleteObjectsResponse deleteResponse = deleteBatch(objectIdentifiers, false);
+
+        List<String> deletedPaths = getDeletedPaths(deleteResponse);
+        List<String> failedPaths = getFailedPaths(deleteResponse);
+
+        return CompletableFuture.completedFuture(new DeletedResult(deletedPaths, failedPaths));
+    }
+
+    @Async("s3DeletionExecutor")
+    public CompletableFuture<List<String>> deleteInBatch(List<String> paths, boolean quiet) {
+        List<ObjectIdentifier> objectIdentifiers = createObjectIdentifiers(paths);
+        DeleteObjectsResponse deleteResponse = deleteBatch(objectIdentifiers, quiet);
+
+        List<String> failedPaths = getFailedPaths(deleteResponse);
 
         return CompletableFuture.completedFuture(failedPaths);
     }
 
-    private List<ObjectIdentifier> createObjectIdentifiers(FilePaths filePaths) {
-        return filePaths.values().stream()
+    private List<ObjectIdentifier> createObjectIdentifiers(List<String> paths) {
+        return paths.stream()
                 .map(this::createObjectIdentifier)
                 .toList();
     }
@@ -41,10 +53,10 @@ public class S3StorageCleaner {
                 .build();
     }
 
-    private DeleteObjectsResponse deleteBatch(List<ObjectIdentifier> batch) {
+    private DeleteObjectsResponse deleteBatch(List<ObjectIdentifier> batch, boolean quiet) {
         Delete delete = Delete.builder()
                 .objects(batch)
-                .quiet(true)
+                .quiet(quiet)
                 .build();
 
         DeleteObjectsRequest request = DeleteObjectsRequest.builder()
@@ -55,9 +67,19 @@ public class S3StorageCleaner {
         return s3Client.deleteObjects(request);
     }
 
-    private FilePaths getFailPathsFromResponse(DeleteObjectsResponse deleteResponse) {
+    private List<String> getDeletedPaths(DeleteObjectsResponse deleteResponse) {
+        return deleteResponse.deleted().stream()
+                .map(DeletedObject::key)
+                .toList();
+    }
+
+    private List<String> getFailedPaths(DeleteObjectsResponse deleteResponse) {
         return deleteResponse.errors().stream()
                 .map(S3Error::key)
-                .collect(Collectors.collectingAndThen(Collectors.toList(), FilePaths::new));
+                .toList();
+    }
+
+    public record DeletedResult(List<String> deletedPaths, List<String> failedPaths) {
+
     }
 }
